feat: split services into module
