# proxy/docs/swagger.json
@@ -34,7 +34,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.AddressGeocodeRequestBody"
+                            "$ref": "#/definitions/entities.AddressGeocode"
                         }
                     }
                 ],
@@ -47,12 +47,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/readresponder.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/readresponder.JSONResponse"
                         }
@@ -85,7 +79,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.AddressSearchRequestBody"
+                            "$ref": "#/definitions/entities.AddressSearch"
                         }
                     }
                 ],
@@ -98,12 +92,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/readresponder.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/readresponder.JSONResponse"
                         }
@@ -199,7 +187,7 @@
         }
     },
     "definitions": {
-        "controller.AddressGeocodeRequestBody": {
+        "entities.AddressGeocode": {
             "type": "object",
             "required": [
                 "lat",
@@ -216,7 +204,7 @@
                 }
             }
         },
-        "controller.AddressSearchRequestBody": {
+        "entities.AddressSearch": {
             "type": "object",
             "required": [
                 "query"
